--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.scroll::-webkit-scrollbar {
+  width: 6px;
+}
+.scroll::-webkit-scrollbar-thumb {
+  background: #c5c4c4;
+  border-radius: 9px;
+}
+.scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+.scroll-chat::-webkit-scrollbar {
+  width: 4px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.scroll-chat::-webkit-scrollbar-thumb {
+  background: #c5c4c4;
+  border-radius: 9px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.scroll-chat::-webkit-scrollbar-track {
+  background: transparent;
 }
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+em-emoji-picker {
+  width: 100%;
+}
+@media only screen and (max-width: 639px) {
+  .scroll::-webkit-scrollbar {
+    width: 0px;
   }
 }
